# ska-tango-images

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  log.txt  oo  pyproject.toml  version.txt
charts/: Makefile  README.md  ci-values.yaml  helm-update.sh  output.yaml  values.yaml
charts/archiver/: Chart.yaml  values.yaml
charts/ska-docker/: Chart.yaml  values.yaml
charts/ska-mc-images/: Chart.yaml  values.yaml
charts/ska-tango-base/: Chart.yaml  values.yaml  values.yaml.sh
charts/ska-tango-images/: Chart.yaml  values.yaml
charts/ska-tango-umbrella/: Chart.yaml  values.yaml
charts/ska-tango-util/: Chart.yaml
charts/tango-base/: Chart.yaml  values.yaml
charts/tango-util/: Chart.yaml  rangeparser.yaml
docker/deploy/: .release  Dockerfile  Makefile
docker/make/: .release  Makefile.mk
docker/tango/: Makefile
docs/src/: README.md  conf.py  docker_compose.rst  docker_images.rst  helm_charts.rst  k8s.rst  (+1 more)
post-deployment/: Makefile  SUT_requirements.txt  test_requirements.txt
repository/: archiver-0.2.2.tgz  index.yaml  ska-docker-0.1.2.tgz  tango-base-0.2.1.tgz  tango-util-0.1.1.tgz
scripts/: gen-bill-of-mats.sh  gen-changelog-versions.sh  gen-doc-from-templates.py  gen-gitlab-ci.sh  gen-images-with-tests.sh  gen-make-deps.sh  generate-values.sh  gitlab-ci.yml.head  lib.sh  oci-build-with-deps.sh  upstream-versions  upstream_versions
tests/: Makefile  MyDeviceServer.py  SUT_requirements.txt  compose.yaml  pytest.ini  requirements.txt  tango_values.yaml  test_basics.py
(+322 files in other folders)
